Use the new statistics module when generating the website